# sentinex

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  conftest.py  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.claude/: settings.local.json
.claude/prompts/: phase-1-foundation.md  phase-2-data-layer.md  phase-3-addon.md  phase-4-pilot.md
.claude/skills/: add-insight-function.md  add-mcp-integration.md  create-addon.md  create-migration.md  debug-tenant.md  deploy.md  update-docs.md
.github/workflows/: ci.yml  deploy.yml  docs.yml
apps/addons/weekly_brief/: api.py  apps.py  events.py  manifest.py  models.py  pdf_generator.py  services.py  tasks.py  urls.py  views.py
apps/agents/: base.py  checkpointers.py  context_builder.py  embedding_gateway.py  guardrails.py  llm_gateway.py  memory.py  models.py  orchestrator.py  pricing.py  prompt_loader.py  tasks.py  tools.py  urls.py  views.py
apps/agents/graphs/: __init__.py  base.py  research_agent.py  state.py
apps/agents/migrations/: 0001_initial.py  0002_memoryembedding.py  0003_memoryembedding_agentrun.py
apps/agents/prompts/: finance_specialist.yaml  knowledge_specialist.yaml  ops_specialist.yaml  orchestrator.yaml  people_specialist.yaml  strategic_specialist.yaml
apps/agents/specialists/: __init__.py  finance.py  knowledge.py  ops.py  people.py  strategic.py
apps/agents/tests/: test_agents.py  test_checkpointer.py  test_guardrails.py  test_llm_gateway.py  test_memory.py  test_ops_specialist.py  test_people_specialist.py  test_research_agent.py  (+1 more)
apps/analytics/: __init__.py  apps.py  clickhouse_client.py  schemas.py  urls.py  views.py
apps/billing/: __init__.py  apps.py  usage_tracker.py
apps/chat/: models.py  urls.py  views.py
apps/connectors/: _setup.py
apps/core/: admin.py  cache.py  feature_flags.py  health.py  middleware.py  models.py  urls.py  views.py
apps/data_access/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  views.py
apps/events/: __init__.py  apps.py  kafka_client.py  schemas.py  signals.py  topic_manager.py
apps/identity/: admin.py  apps.py  models.py  services.py
apps/memory/: __init__.py  apps.py  graphiti_client.py  models.py  neo4j_client.py  urls.py  views.py
apps/observability/: __init__.py  apps.py  decorators.py  evals.py  langfuse_client.py  middleware.py  prompt_manager.py  signals.py  tasks.py  urls.py  views.py
bronislav/: TODO.md  sentinex-architektura-a-plan.md  sentinex-db-struktura.md  sentinex-role-a-prava.md
config/: asgi.py  celery.py  logging.py  urls.py
config/settings/: base.py  dev.py  prod.py  production.py  test.py
deploy/: deploy.sh  entrypoint.sh
deploy/nginx/: sentinex.conf
docs/: ADDONS.md  AGENTS.md  ARCHITECTURE.md  CLAUDE_CODE_SETUP.md  CONNECTORS.md  DATA_ACCESS.md  DEPLOYMENT.md  DEVELOPMENT.md  GOOGLE_WORKSPACE_DWD.md  ONBOARDING.md  PROJECT_PLAN.md  README.md  SECURITY.md  TENANCY.md  TESTING.md  TODO.md  UI.md
docs/connectors/: README.md  fapi.md  google_workspace.md  merk.md  pipedrive.md  slack.md
docs/onboarding_emails/: first_brief.md  welcome.md
infra/: deploy.sh  setup-server.sh  ssl-renew.sh
infra/clickhouse/: init.sql
infra/neo4j/: init.cypher
infra/nginx/: sentinex.conf
prompts/: 01-project-setup.md  02-django-tenancy.md  03-auth-basic.md  04-llm-gateway.md  05-agent-layer.md  06-memory-guardrails.md  07-google-workspace-mcp.md  08-insight-functions.md  09-addon-framework.md  10-weekly-brief-addon.md  11-deployment.md  12-pilot-onboarding.md  13-langgraph-orchestration.md  14-graphiti-neo4j.md  15-kafka-event-bus.md  16-clickhouse-analytics.md  17-langfuse-observability.md
scripts/: bootstrap_dev.py
templates/: app_shell.html  base.html
templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  signup.html
templates/chat/: chat_detail.html  chat_list.html
templates/connectors/: _icons.html  _retry_banner.html  _tile.html  caflou_setup.html  ecomail_setup.html  fapi_setup.html  raynet_setup.html  smartemailing_setup.html  trello_setup.html
templates/core/: dashboard.html  invitation_mismatch.html  no_membership.html
templates/insights/: _card_finance.html  _card_marketing.html  _card_people.html  _card_projects.html  _card_sales.html  _card_strategic.html  index.html
templates/integrations/: connect.html  list.html  workspace_dwd_dashboard.html  workspace_dwd_setup.html
templates/knowledge/: _results.html  search.html
tests/: test_chat.py  test_deployment.py  test_frontend_smoke.py  test_long_term_memory.py  test_observability.py  test_smoke.py
tests/integration/: conftest.py  test_clickhouse_analytics.py  test_full_stack.py  test_kafka_event_bus.py  test_langfuse_trace.py  test_neo4j_memory.py  test_redis_checkpointer.py
tests/smoke/: conftest.py  test_django_health.py  test_services_reachable.py
(+336 files in other folders)
